<resources>
    <string name="app_name">Salle_Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="username_et">Username</string>
    <string name="password">Password:</string>
    <string name="re_password_et">Repeat Password</string>
    <string name="password_et">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="et_e_mail">E-mail</string>
    <string name="e_mail_tv">E-mail:</string>
    <string name="needName">Need Name</string>
    <string name="needemail">Need E-mail</string>
    <string name="needPass1">Need Password</string>
    <string name="needPass2">Need Repeat Password</string>
    <string name="pass1IsDifferentPass2">Passwords do not match</string>
    <string name="alreadyRegistered">You are already registered</string>
    <string name="usernameOrPassIncorrect">Username/Password is incorrect</string>
    <string name="enterUsernameAndPass">Please enter username and password</string>
    <string name="invalidEmail">Invalid E-mail</string>
    <string name="needsMore8Characters">The password needs more that 8 characters</string>
    <string name="username_string">Username</string>
    <string name="favoritos_string">Favoritos</string>
    <string name="logout">logout</string>
    <string name="couldNotRegister">Could not register</string>
    <string name="tv_email">E-mail:</string>
    <string name="e_mail">E-mail</string>
    <string name="example_text">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló</string>
    <string name="email_string">email</string>
    <string name="hint">Harry</string>
</resources>
